--- a/tab-man/manifest.json
+++ b/tab-man/manifest.json
@@ -1,15 +1,13 @@
 {
   "manifest_version": 2,
   "name": "Tab-man",
-  "version": "0.8.0",
+  "version": "1.2.0",
   "description": "Tab manager ",
-  // "homepage_url": "",
+  "homepage_url": "",
   "permissions": [
     "activeTab",
-    //  "clipboardRead",
-    //  "clipboardWrite",
-    //  "clipboard-read",
-    //  "clipboard-write",
+    "clipboardRead",
+    "clipboardWrite",
     "contextMenus",
     "notifications",
     "tabs",
